removed unused and collectors refactor